salesforce-main/src/main/default/objects/CampaignMember/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Formula field that displays address information of the location where the campaign is held.  Used to populate automated emails messages from Salesforce (e.g. open day emails).</description>
    <formula>Campaign.Location__r.Address_2__c</formula>
    <label>Address 2</label>
    <type>Text</type>
</CustomField>