salesforce-main/src/main/default/objects/CampaignMember/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <description>Formula field that displays address information of the location where the campaign is held.  Used to populate automated emails messages from Salesforce (e.g. open day emails).</description>
    <formula>Campaign.Location__r.Address_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 3</label>
    <type>Text</type>
</CustomField>