salesforce-main/src/main/default/objects/CampaignMember/fields/Anticipated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Start_Date__c</fullName>
    <description>Indicates the date that the student is likley to start the programme of expressed interest.  Should roughly correlate to close date on opportunity.</description>
    <label>Anticipated Start Date</label>
    <type>Date</type>
</CustomField>