salesforce-main/src/main/default/objects/CampaignMember/fields/Campaign_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opts individual out of this specific campaign only.  Prevents automated messages from being sent.</description>
    <inlineHelpText>Opts individual out of this specific campaign only.</inlineHelpText>
    <label>Campaign Opt Out</label>
    <type>Checkbox</type>
</CustomField>