salesforce-main/src/main/default/objects/CampaignMember/fields/Campaign_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Time__c</fullName>
    <formula>Campaign.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Start Time</label>
    <type>DateTime</type>
</CustomField>