salesforce-main/src/main/default/objects/CampaignMember/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Formula field that displays address information of the location where the campaign is held.  Used to populate automated emails messages from Salesforce (e.g. open day emails).</description>
    <formula>Campaign.Location__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>