salesforce-main/src/main/default/objects/CampaignMember/fields/Interest_Area__c.field-meta.xml
<CustomField>
    <fullName>Interest_Area__c</fullName>
    <description>Area of Interest for data team uploads, matches p/l values for Opp. Interest Area</description>
    <label>Interest Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountancy &amp; Tax</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>