salesforce-main/src/main/default/objects/CampaignMember/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Formula field that displays location name of the location where the campaign is held.  Used to populate automated emails messages from Salesforce (e.g. open day emails).</description>
    <formula>Campaign.Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>