salesforce-main/src/main/default/objects/CampaignMember/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Formula field that displays address information of the location where the campaign is held.  Used to populate automated emails messages from Salesforce (e.g. open day emails).</description>
    <formula>Campaign.Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>