salesforce-main/src/main/default/objects/CampaignMember/fields/Programme_Text__c.field-meta.xml
<CustomField>
    <fullName>Programme_Text__c</fullName>
    <description>Indicates the programme the student expressed interest in while attending the campaign.  Primarily used when a campaign may be relevant to more than one programme.</description>
    <label>Programme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>